--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
-    "chess.js": "^1.0.0-beta.4",
+    "chess.js": "^0.12.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-chessboard": "^2.1.2",
